--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -48,6 +48,12 @@
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.29</version>
+		</dependency>
 	</dependencies>
 
 	<build>
