--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=spring-boot
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.exclude=static/**,public/**
