--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -48,11 +48,24 @@
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-firestore -->
+
+		<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-oauth2-http</artifactId>
+			<version>1.32.1</version> 
+		</dependency>
+
 		<dependency>
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-firestore</artifactId>
-			<version>3.30.7</version>
+			<version>3.30.7</version>  
 		</dependency>
 
 		<dependency>
