--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=spring-boot
 spring.devtools.restart.additional-paths=src/main/java
 spring.devtools.restart.exclude=static/**,public/**
+server.address=0.0.0.0
+server.port=8080
