--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,17 +1,23 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
     container_name: backend
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    # environment:
+    #   - SPRING_APPLICATION_JSON={"server.address":"0.0.0.0","server.port":"8080"}
+    # networks:
+    #   - dev-network
 
     volumes:
       - ../..:/workspaces:cached
-      
+
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
-    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
