--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   app:
-    container_name: backend
+    container_name: backend-dev
     build:
       context: .
       dockerfile: Dockerfile
