allow bigger files + blocking firestore upload

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.devtools.restart.additional-paths=src/main/java
 spring.devtools.restart.exclude=static/**,public/**
 server.address=0.0.0.0
 server.port=8080
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
