--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.devtools.restart.additional-paths=src/main/java
 spring.devtools.restart.exclude=static/**,public/**
 server.address=0.0.0.0
 server.port=443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=deeznuts
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
